update authorize and authenticate

--- a/E-EstateV2/angular.json
+++ b/E-EstateV2/angular.json
@@ -36,7 +36,8 @@
               "base64-js",
               "html2canvas",
               "jspdf",
-              "angularx-qrcode"
+              "angularx-qrcode",
+              "qrcode"
             ]
           },
           "configurations": {
