--- a/.github/workflows/angular-cd.yml
+++ b/.github/workflows/angular-cd.yml
@@ -7,25 +7,23 @@ on:
 
 jobs:
   deploy:
-    runs-on: windows-latest  # Windows required for network drive access
+    runs-on: windows-latest  # Ensure Windows compatibility for network drive commands
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build Angular App
-        run: |
-          cd E-EstateV2
-          npm install
-          npm install -g @angular/cli
-          ng build
-
       - name: Verify Build Path
+        shell: pwsh
         run: |
-          if not exist "E-EstateV2\dist\e-estate-v2" exit 1
+          if (-Not (Test-Path "E-EstateV2\dist\e-estate-v2")) { 
+            Write-Error "Build folder not found!" 
+            exit 1 
+          }
 
-      - name: Deploy to Network Location
+      - name: Map Network Drive and Copy Files
+        shell: cmd
         run: |
-          net use Z: "\\DEVAPP02\trainingE-estate" /user:${{ secrets.NET_DRIVE_USERNAME }} ${{ secrets.NET_DRIVE_PASSWORD }}
-          robocopy E-EstateV2\dist\e-estate-v2 Z:\e-estate-v2 /MIR
+          net use Z: "${{ secrets.NET_DRIVE_PATH }}" /user:${{ secrets.NET_DRIVE_USERNAME }} ${{ secrets.NET_DRIVE_PASSWORD }}
+          robocopy "E-EstateV2\dist\e-estate-v2" "Z:\e-estate-v2" /MIR
           net use Z: /delete
