--- a/.github/workflows/angular-cd.yml
+++ b/.github/workflows/angular-cd.yml
@@ -13,11 +13,22 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Build Angular App
+      - name: Access folder E-EstateV2 and Build
         run: |
+          # Navigate to the E-EstateV2 directory
           cd E-EstateV2
+
+          # Install dependencies
           npm install
-          ng build 
+
+          # Install Angular CLI
+          npm install -g @angular/cli
+
+          # Test Karma
+          # ng test
+
+          # Build Angular project
+          ng build
 
 
       - name: Verify Build Path
